name:           morse
version:        0.1.0.0
author:         Brody Berg
maintainer:     brody@example.com
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
category:       text

-- extra-source-files:
--     ChangeLog.md
--     README.md

-- source-repository head
--   type: git
--   location: https://github.com/githubuser/MorseCode

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , QuickCheck
  exposed-modules:
      Morse
  ghc-options:
      -Wall -fwarn-tabs
  -- other-modules:
  --     Paths_MorseCode
  default-language: Haskell2010

executable morse
  main-is: Main.hs
  hs-source-dirs:
      src
  -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options:
      -Wall -fwarn-tabs
  build-depends:
      morse
    , base >=4.7 && <5
    , containers
    , QuickCheck
  other-modules:
    Morse
  -- other-modules:
  --     Paths_MorseCode
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:
      tests
  -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options:
      -Wall -fwarn-tabs
  build-depends:
      morse
    , base >=4.7 && <5
    , containers
    , QuickCheck
  -- other-modules:
  --     Paths_MorseCode
  default-language: Haskell2010
