name: Untitled
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.0
Executable PrettyJSON
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      SimpleJSON
      Prettify
      PrettyJSON
