name:                validation-book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/brodyberg/validation-book#readme
license:             BSD3
license-file:        LICENSE
author:              Brody Berg
maintainer:          brodyberg@gmail.com
copyright:           Brody Berg
category:            personal
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  Exposed-Modules:     Main_Either
                     , Main_Original

executable validation-book
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , validation
