cabal-version: 2.4
name: LearnHaskell
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2
extra-source-files:
    FindingASharedMotif.md
    NewText.txt
    FindingAMotif/rosalind_mprt_3.txt
    FindingAMotif/rosalind_mprt_1.txt
    FindingAMotif/rosalind_mprt_2.txt
    FindingAMotif/rosalind_mprt_4.txt
    FindingASharedMotif/rosalind_lcsm_2.txt
    FindingASharedMotif/rosalind_lcsm_1.txt
    FindingAProteinMotif.md

library
    hs-source-dirs: lib
    other-modules:
        ProjectRosalind.Window
        ProjectRosalind.FSMRecursive
        ProjectRosalind.Buyable
        ProjectRosalind.FSMSlicesVector
        ProjectRosalind.FindingAProteinMotif
        ProjectRosalind.FSMdirectToSetFull
        ProjectRosalind.FSMString
        ProjectRosalind.FileFasta
        ProjectRosalind.Fasta
        ProjectRosalind.Motif.Combinator
        ProjectRosalind.Motif.FunctionsAndTypesForParsing
        ProjectRosalind.Motif.ExpressionParsing
        ProjectRosalind.Motif.Char
        ProjectRosalind.Motif.Parsec
        ProjectRosalind.Motif.Expr
        ProjectRosalind.Motif.MeatSpace
        ProjectRosalind.FSMdirectToSetFull2
        ProjectRosalind.Fasta_Types
        ProjectRosalind.FindingASharedMotif
        ProjectRosalind.FSMdirectToSet
        HaskellBook.Chapter7Exercises
        HaskellBook.MoodSwing
        HaskellBook.Chapter10Exercises
        HaskellBook.Learn
        HaskellBook.GuardDuty
        HaskellBook.DeconstructingValuesChapter11
        HaskellBook.Practice
        HaskellBook.Arith2
        HaskellBook.DivideThenAdd
        HaskellBook.NotAListChapter12
        HaskellBook.VigenereCipherChapter11
        HaskellBook.YesMonomorphism
        HaskellBook.RegisteredUser2
        HaskellBook.MakePersonChapter13
        HaskellBook.Dodgy
        HaskellBook.NoMonomorphism
        HaskellBook.MyLinesChapter9
        HaskellBook.PhoneExercise
        HaskellBook.WriteATypeSignature
        HaskellBook.Matching
        HaskellBook.ItsOnlyNaturalChapter12
        HaskellBook.EqInstances
        HaskellBook.StandardChapter9
        HaskellBook.LanguageExercisesChapter11
        HaskellBook.DogTypesChapter11
        HaskellBook.CasePractice
        HaskellBook.SquareCubeChapter9
        HaskellBook.Chapter9
        HaskellBook.StringProcessingChapter12
        HaskellBook.Chapter3
        HaskellBook.MatchingTuples1
        HaskellBook.TypeInference1
        HaskellBook.Arith4
        HaskellBook.SmallLibraryForEitherChapter12
        HaskellBook.GreetIfCool3
        HaskellBook.GoatsChapter11
        HaskellBook.Chapter5DetermineTheType
        HaskellBook.Blank
        HaskellBook.AsPatternsChapter11
        HaskellBook.PalindromeChapter13
        HaskellBook.Penguin
        HaskellBook.ProductTypesChapter11
        HaskellBook.SmallLibraryForMaybeChapter12
        HaskellBook.DayOfWeek
        HaskellBook.LogicGoatsChapter11
        HaskellBook.TypeDistributivePropertyChapter11
        HaskellBook.Chapter5
        HaskellBook.Chapter4
        HaskellBook.Case
        HaskellBook.GoatsDerivingChapter11
        HaskellBook.ValidateTheWordChapter12
        HaskellBook.VehiclesChapter11
        HaskellBook.WaxOn
        HaskellBook.FoldingExample
        HaskellBook.WhereDoesYourGardenGrowChapter11
        HaskellBook.CipherChapter9
        HaskellBook.SymmetryChapter9
        HaskellBook.TypeInference2
        HaskellBook.ProgrammersChapter11
        HaskellBook.AcrosChapter9
        HaskellBook.GoatsNotDerivingChapter11
        HaskellBook.Chapter17_Applicative
        HaskellBook.PityTheBoolChapter11
        HaskellBook.DatabaseProcessing
        HaskellBook.Chapter6
        HaskellBook.UnfoldsAgainChapter12
        HaskellBook.Reverse
        HaskellBook.MoreBottomChapter9
        HaskellBook.HuttonsRazorChapter11
        HaskellBook.Compose
        HaskellBook.FilteringChapter9
        HaskellBook.ZippingChapter9
        HaskellBook.DeconstructingChapter11
        HaskellBook.UnfoldsChapter12
        HaskellBook.Chapter7GrabBag
        HaskellBook.EftChapter9
        HaskellBook.PartiallyAppliedDataConstructorsChapter11
        HaskellBook.BinaryTreeChapter11
        HaskellBook.RegisteredUser1
    default-language: Haskell2010
    build-depends:
        http-client -any,
        QuickCheck -any,
        mtl -any,
        containers -any,
        pipes -any,
        http-client-tls -any,
        time -any,
        array -any,
        split -any,
        regex-tdfa -any,
        bytestring -any,
        parsec -any,
        base -any
