cabal-version: 2.4
name: LearnHaskell
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2
extra-source-files:
    NewText.txt
    FindingASharedMotif/rosalind_lcsm_1.txt
    FindingASharedMotif/rosalind_lcsm_2.txt
    FindingAMotif/rosalind_mprt_3.txt
    FindingAMotif/rosalind_mprt_4.txt
    FindingAMotif/rosalind_mprt_2.txt
    FindingAMotif/rosalind_mprt_1.txt
    FindingAProteinMotif.md
    FindingASharedMotif.md

library
    hs-source-dirs: lib
    other-modules:
        HaskellBook.EqInstances
        HaskellBook.NoMonomorphism
        HaskellBook.StringProcessingChapter12
        HaskellBook.ItsOnlyNaturalChapter12
        HaskellBook.PhoneExercise
        HaskellBook.StandardChapter9
        HaskellBook.VehiclesChapter11
        HaskellBook.Chapter3
        HaskellBook.Blank
        HaskellBook.LanguageExercisesChapter11
        HaskellBook.Chapter10Exercises
        HaskellBook.VigenereCipherChapter11
        HaskellBook.WaxOn
        HaskellBook.RegisteredUser1
        HaskellBook.MakePersonChapter13
        HaskellBook.RegisteredUser2
        HaskellBook.ProductTypesChapter11
        HaskellBook.Arith2
        HaskellBook.Learn
        HaskellBook.DivideThenAdd
        HaskellBook.LogicGoatsChapter11
        HaskellBook.EftChapter9
        HaskellBook.Chapter7Exercises
        HaskellBook.TypeDistributivePropertyChapter11
        HaskellBook.Chapter6
        HaskellBook.Chapter5
        HaskellBook.Chapter4
        HaskellBook.MoreBottomChapter9
        HaskellBook.Matching
        HaskellBook.DeconstructingValuesChapter11
        HaskellBook.CasePractice
        HaskellBook.MoodSwing
        HaskellBook.GoatsNotDerivingChapter11
        HaskellBook.Case
        HaskellBook.DatabaseProcessing
        HaskellBook.Arith4
        HaskellBook.GoatsDerivingChapter11
        HaskellBook.Penguin
        HaskellBook.Practice
        HaskellBook.SymmetryChapter9
        HaskellBook.TypeInference1
        HaskellBook.ValidateTheWordChapter12
        HaskellBook.ZippingChapter9
        HaskellBook.CipherChapter9
        HaskellBook.Chapter17_Applicative
        HaskellBook.ProgrammersChapter11
        HaskellBook.PalindromeChapter13
        HaskellBook.Chapter5DetermineTheType
        HaskellBook.GreetIfCool3
        HaskellBook.YesMonomorphism
        HaskellBook.Dodgy
        HaskellBook.DogTypesChapter11
        HaskellBook.TypeInference2
        HaskellBook.GoatsChapter11
        HaskellBook.DeconstructingChapter11
        HaskellBook.NotAListChapter12
        HaskellBook.SquareCubeChapter9
        HaskellBook.UnfoldsAgainChapter12
        HaskellBook.WhereDoesYourGardenGrowChapter11
        HaskellBook.WriteATypeSignature
        HaskellBook.GuardDuty
        HaskellBook.HuttonsRazorChapter11
        HaskellBook.Compose
        HaskellBook.SmallLibraryForEitherChapter12
        HaskellBook.UnfoldsChapter12
        HaskellBook.MyLinesChapter9
        HaskellBook.AsPatternsChapter11
        HaskellBook.FoldingExample
        HaskellBook.AcrosChapter9
        HaskellBook.DayOfWeek
        HaskellBook.PartiallyAppliedDataConstructorsChapter11
        HaskellBook.PityTheBoolChapter11
        HaskellBook.Chapter7GrabBag
        HaskellBook.Reverse
        HaskellBook.SmallLibraryForMaybeChapter12
        HaskellBook.Chapter9
        HaskellBook.MatchingTuples1
        HaskellBook.FilteringChapter9
        HaskellBook.BinaryTreeChapter11
        ProjectRosalind.Window
        ProjectRosalind.Motif.Expr
        ProjectRosalind.Motif.ExpressionParsing
        ProjectRosalind.Motif.Char
        ProjectRosalind.Motif.FunctionsAndTypesForParsing
        ProjectRosalind.Motif.Combinator
        ProjectRosalind.Motif.Parsec
        ProjectRosalind.Motif.MeatSpace
        ProjectRosalind.Buyable
        ProjectRosalind.Fasta_Types
        ProjectRosalind.FileFasta
        ProjectRosalind.Lcsm.FindingASharedMotif
        ProjectRosalind.Lcsm.Recursive
        ProjectRosalind.Lcsm.ToListFull
        ProjectRosalind.Lcsm.DirectToSetFull2
        ProjectRosalind.Lcsm.DirectToSetFull
        ProjectRosalind.Lcsm.DirectToSet
        ProjectRosalind.Lcsm.String
        ProjectRosalind.Lcsm.SlicesVector
        ProjectRosalind.Fasta
        ProjectRosalind.FindingAProteinMotif
    default-language: Haskell2010
    build-depends:
        http-client -any,
        QuickCheck -any,
        mtl -any,
        containers -any,
        pipes -any,
        http-client-tls -any,
        time -any,
        array -any,
        split -any,
        regex-tdfa -any,
        bytestring -any,
        parsec -any,
        base -any
