name:                csv1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/csv1#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable csv1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       bytestring,
                       tasty,
                       tasty-hunit,
                       mtl >= 2.2 && < 3,
                       pipes


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             TestMain.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       bytestring,
                       tasty,
                       tasty-hunit
